# HigFlow

./: .gitignore  CMakeLists.txt  README.md  TUM  TUMCLEAR  TUM_2D  TUM_3D  TUM_CLEAR_ALL  TUM_VISC  TUMclear  hig-flow-bc.c  hig-flow-discret.h  hig-flow-eval.c  hig-flow-ext-func.h  hig-flow-ic.c  hig-flow-ic.h  hig-flow-io.c  hig-flow-kernel.h  hig-flow-mittag-leffler.h  hig-flow-res.h  hig-flow-step-electroosmotic-viscoelastic.h  hig-flow-step-electroosmotic.c  hig-flow-step-multiphase-viscoelastic.h  hig-flow-step-multiphase.c  hig-flow-step-viscoelastic.c  hig-flow-step.h  hig-flow-terms.c  hig-flow-terms.h  hig-flow-vof-9-cells.h  hig-flow-vof-adap-hf.h  hig-flow-vof-elvira.c  hig-flow-vof-finite-difference-normal-curvature.h  install_higflow_ubuntu18  install_higflow_ubuntu22  submission.job  tum  tum_examples2D_n  tum_examples2D_vof  tum_test_all_cases  varsrc  (+1 more)
higflow/: CMakeLists.txt  Makefile  Makefile.higflow.common
higflow/doc/: HiG-Flow.tutorial
higflow/example2d_BMP/: CMakeLists.txt  Makefile  matrix  ns-example  ns-example-2d.c  ns-example-2d.h
higflow/example2d_Gptt/: CMakeLists.txt  Makefile  ns-example  ns-example-2d.c  ns-example-2d.h
higflow/example2d_KBKZ/: CMakeLists.txt  Makefile  ns-example  ns-example-2d.c  ns-example-2d.h  readme.txt
higflow/example2d_Newt/: Makefile  ns-example  ns-example-2d.c  ns-example-2d.h
higflow/example2d_Newt_contraction/: CMakeLists.txt  Makefile  ns-example  ns-example-2d.c
higflow/example2d_Oldroyd/: CMakeLists.txt  Makefile  ns-example  ns-example-2d.c  ns-example-2d.h
higflow/example2d_VOF/: .project  CMakeLists.txt  Makefile  ns-example  ns-example-2d.c  ns-example-2d.h
higflow/example2d_VOF_Gptt/: CMakeLists.txt  Makefile  ns-example  ns-example-2d.c
higflow/example2d_VOF_Oldroyd/: CMakeLists.txt  Makefile  ns-example  ns-example-2d.c  ns-example-2d.h
higflow/example2d_rising_bubble/: ns-example-2d.c
higflow/example2d_single_vortex/: ns-example-2d.c
higflow/example2d_zalesak/: Makefile  ns-example
higflow/example2d_zalesak_65/: ns-example-2d.c  ns-example-2d.h
higflow/example3d_complex/: Makefile  Makefile.old  mf  ns-complex-3d  ns-complex-3d.c  ns-complex-3d.h
higflow/example3d_lid_driven/: Makefile  Makefile.3d  ns-exemple-3d  ns-exemple-3d.c
higflow/examples2D_128_oscilante/: Makefile  ns-example  ns-example-2d.c
higflow/examples2D_n/: Makefile  ns-example  ns-example-2d.c  ns-load-example-2d.c  ns-save-example-2d.c
higflow/examples2D_vof/: Makefile  ns-example  ns-example-2d.c
higflow/include/: hig-flow-bc.h  hig-flow-discret.h  hig-flow-eval.h  hig-flow-ic.h  hig-flow-io.h  hig-flow-kernel.h  hig-flow-mittag-leffler.h  hig-flow-res.h  hig-flow-step-elastoviscoplastic.h  hig-flow-step-electroosmotic-viscoelastic.h  hig-flow-step-electroosmotic.h  hig-flow-step-multifase.h  hig-flow-step-multiphase-electroosmotic-viscoelastic.h  hig-flow-step-multiphase-electroosmotic.h  hig-flow-step-multiphase-viscoelastic.h  hig-flow-step-multiphase.h  hig-flow-step-shear-thickening-suspension.h  hig-flow-step-viscoelastic-integral.h  hig-flow-step-viscoelastic-shear-banding.h  hig-flow-step-viscoelastic.h  hig-flow-step.h  hig-flow-terms.h  hig-flow-vof-9-cells.h  hig-flow-vof-ELVIRA.h  hig-flow-vof-adap-hf.h  hig-flow-vof-finite-difference-normal-curvature.h
higflow/src/: .hig-flow-kernel.h.swp  contr.flowtype  hig-flow-bc.c  hig-flow-bc.h  hig-flow-discret.c  hig-flow-discret.h  hig-flow-discret_old.c  hig-flow-eval.c  hig-flow-eval.h  hig-flow-ext-func.c  hig-flow-ic.c  hig-flow-ic.h  hig-flow-io.c  hig-flow-io.h  hig-flow-kernel.c  hig-flow-kernel.h  hig-flow-mittag-leffler.c  hig-flow-mittag-leffler.h  hig-flow-res.c  hig-flow-step-elastoviscoplastic.c  hig-flow-step-electroosmotic-viscoelastic.c  hig-flow-step-electroosmotic-viscoelastic.h  hig-flow-step-electroosmotic.c  hig-flow-step-electroosmotic.h  hig-flow-step-electroosmotic_old.c  hig-flow-step-generalized-newtonian.c  hig-flow-step-generalized-newtonian.h  hig-flow-step-multiphase-electroosmotic-viscoelastic.c  hig-flow-step-multiphase-electroosmotic.c  hig-flow-step-multiphase-electroosmotic.h  hig-flow-step-multiphase-viscoelastic.c  hig-flow-step-multiphase-viscoelastic.h  hig-flow-step-multiphase.c  hig-flow-step-multiphase.h  hig-flow-step-shear-thickening-suspension.c  hig-flow-step-viscoelastic-integral.c  hig-flow-step-viscoelastic-integral.h  hig-flow-step-viscoelastic-shear-banding.c  hig-flow-step-viscoelastic-variable-viscosity.c  hig-flow-step-viscoelastic-variable-viscosity.h  (+21 more)
higtree/: CMakeLists.txt  Makefile  Makefile.common
higtree/atf-tests/: Atffile  Makefile  test-basic-operation-2d.c  test-basic-operation-3d.c  test-domain-2d.c  test-example-2d.c  test-higtree-io-2d.c  test-higtree-io-3d.c  test-higtree-iterators-2d.c  test-mapper-2d.c  test-point-cloud-2d.c  test-solver-2d.c  test-wls-2d.c
higtree/doc/: biblio.bib  cientifica.tex  documentacao.tex  programador.tex  usuario.tex
higtree/examples/: Makefile  big-cube-3d.amr  big-mesh3d-1.amr  bigger-cube-3d.amr  calc-bc-example-2d.c  dim-iterator-example-2d.c  distributed-properties-example-2d.c  face-iterator-example-2d.c  interpolate-example-3d.c  mesh-test-3d.amr  mesh00000001-2d.amr  mesh00000002-2d.amr  mesh00000003-2d.amr  mesh2d-2.amr  mesh3d-1.amr  mesh3d-2.amr  mesh3d-3.amr  mesh3d-complex.amr  mesh3d-test1.amr  mesh3d-test2.amr  poisson-composed-higtree-example-2d.c  poisson-example-2d.c  poisson-example-nd.c  poisson-parallel-example-2d.c  poisson-variable-rho-example-2d.c  read-amr-calc-partition-example.c  read-amr-calc-point-cloud-example-3d.c  read-amr-distribute-example-3d.c  read-amr-interpolate-add-example-3d.c  read-amr-interpolate-example-2d.c  read-amr-interpolate-example-3d.c  read-amr-iterate-facets-example-2d.c  read-amr-map-ids-print-adj-matrix-example-2d.c  read-amr-send-to-other-node-example-2d.c  read-amr-solve-cavity-ns-example-2d.c  read-amr-solve-cavity-ns-example-3d.c  read-amr-solve-cavity-ns-incremental-example-3d.c  read-amr-solve-channel-ns-example-2d.c  read-amr-solve-channel-ns-incremental-example-3d.c  (+19 more)
(+1311 files in other folders)
